add virtual thread support.